test/error/02_type_mismatch.f
      PROGRAM ERRTYPE
      INTEGER A
      LOGICAL B
      B = .TRUE.
      A = B
      PRINT *, A
      END
